feat(core): copilot reviewn - add DC and tu
