# docs/src/static/swagger.yaml
@@ -447,6 +447,12 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+        '409':
+          description: Target entity has required relations
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         '500':
           description: Unexpected server-side failure
           content:
